# xframe-ramblings

./: CMakeLists.txt
scripts/: build  clean
src/: example1.cpp  example4.cpp
